# Long-context-Eval

./: .gitignore  README.md  README_ZH.md  Untitled.ipynb  draft.sh  pyproject.toml  requirements.txt  setup.py
LongBench/2wikimqa/: final_metrics.json
LongBench/gov_report/: final_metrics.json
LongBench/hotpotqa/: final_metrics.json
LongBench/lcc/: final_metrics.json
LongBench/multi_news/: final_metrics.json
LongBench/multifieldqa_en/: final_metrics.json
LongBench/musique/: final_metrics.json
LongBench/narrativeqa/: final_metrics.json
LongBench/passage_count/: final_metrics.json
LongBench/passage_retrieval_en/: final_metrics.json
LongBench/qasper/: final_metrics.json
LongBench/qmsum/: final_metrics.json
LongBench/repobench-p/: final_metrics.json
LongBench/samsum/: final_metrics.json
LongBench/trec/: final_metrics.json
LongBench/triviaqa/: final_metrics.json
Model_Deploy_URLs/: test.py
Model_Deploy_URLs/models/activation_beacon/: activation_beacon.py
Model_Deploy_URLs/models/transformer_rul/: transformer.py
Model_Deploy_URLs/rag/: BM25.py  __init__.py  llamaindex.py  raptor.py
cogfigs/: eval_configs.yaml  make_configs.py
dataset/Factuality/: test.py
dataset/General/: test.py
dataset/Math/: test.py
dataset/summhay/: llm_params.json  make_data.py  transform_gen.py
demo/: model.yaml  model_out  task.yaml
docs/: interface.md
evaluation/: README.md  postprocess.py  task_configs.yaml  task_registry.yaml
lte/: eval.py  generate.py  interface.md  interface_ZH.md  main.py
lte.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lte/utils/: eval_args.py  general_model.py  main_args.py  request.py  results_table.py  utils.py
metrics/: LongBench_v2.py  __init__.py  gpt.py  l_citeeavl_metrics.py  longbench_metrics.py  niah.py
metrics/LEval/: auto_eval.py  em.py  f1.py  rouge.py
metrics/couting_stars/: counting_stars_citation.py  counting_stars_reasoning.py  counting_stars_searching.py
metrics/general_metrics/: bert_score.py  bleu.py  meteor_score.py  rouge.py  string_math.py  test.py
models_deploy/: __init__.py
models_deploy/rag/: BM25.py  __init__.py  bass_class.py  contriever.py  llamaindex.py  openai.py  openai_.py  rag_configs.yaml  raptor.py
tasks/: ADD.md  ADD_ZH.md  README.md  README_ZH.md  eval_task.py  instance.py  task_configs.yaml  test.py
tasks/configs/: Counting_Stars.yaml  L_CiteEval.yaml  LooGLE.yaml  RULER.yaml  __init__.py  custom_RULER.yaml  custom_RULER2.yaml
utils/: eval_args.py  general_model.py  generation_args.py  main_args.py  request.py  results_table.py  utils.py
(+232 files in other folders)
