[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lte"
version = "0.1"
description = "A framework for evaluating lont language models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.9.2","torch","transformers", "accelerate", "vllm", "loguru",  "replicate", "umap-learn==0.5.5", "llama_index.embeddings.huggingface", "pillow>=10.3.0","llama_index.llms.huggingface", "llama_index.readers.string_iterable", "scikit-learn", "sentence-transformers", "bs4", "rank_bm25", "llama_index", "fabric>=3.0",  "bert_score", "flask", "gevent", "pandas", "peft", "sacrebleu", "hydra-core", "nltk", "nvidia-ml-py", "openai", "openpyxl", "rouge", "rouge_chinese", "jieba", "fuzzywuzzy", "pandas", "wonderwords", "tenacity", "python-Levenshtein", "scipy", "PyYAML", "tqdm", "datasets", "html2text", "nemo", "flash_attn", "huggingface_hub"]

[tool.setuptools.packages.find]
include = ["*"]


[project.scripts]
"lte.run" = "lte.main:main"
"lte.eval" = "lte.eval:eval"
