[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lte"
version = "0.1"
description = "A framework for evaluating lont language models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["vllm==0.6.4.post1","loguru","peft","llama_index","llama_index.readers.string_iterable","llama_index.llms.huggingface","llama_index.embeddings.huggingface","rank_bm25","rouge","bert_score","jieba","fuzzywuzzy","rouge_score","openpyxl"]


[tool.setuptools.packages.find]
include = ["*"]


[project.scripts]
"lte.run" = "lte.main:main"
"lte.eval" = "lte.eval:eval"
